Changes with melon 1.6.7                                          20 May 2017
    *) Fixed some bugs of JSON.
    *) Added script functions about JSON.

Changes with melon 1.6.6                                          18 May 2017
    *) Added script function about Base64.
    *) Added script functions about DES, 3DES.
    *) Added script function about MD5.
    *) Added script functions about SHA1, SHA256.
    *) Added script function about RC4.
    *) Added script function about Prime Generator.

Changes with melon 1.6.5                                          17 May 2017
    *) Added script function about AES.

Changes with melon 1.6.4                                          16 May 2017
    *) Updated Lang component.
    *) Added Set of file of melang.
    *) Updated interfaces of string of melang.
    *) Fixed a bug in interface print of melang.
    *) Updated a macro in defs component.

Changes with melon 1.6.3                                          13 May 2017
    *) Updated Lang component.
    *) Fixed some bugs about Lang component.
    *) Added some melang functions for string.

Changes with melon 1.6.2                                          07 May 2017
    *) Added FEC component.
    *) Added Reed-Solomon Code component.
    *) Added Matrix component.
    *) Updated some macros.

Changes with melon 1.6.1                                          14 Apr 2017
    *) Dropped malloc/free library -- salloc.
    *) Fixed a bug in melang.
    *) Dropped some source files.
    *) Added a new component -- core.
    *) Made framework to be a library.

Changes with melon 1.6.0                                          12 Feb 2017
    *) Added Lang component to execute script AST.
    *) Added Lang components of all data types.
    *) Updated string component.
    *) Updated log component.
    *) Updated event component.
    *) Updated shell script 'configure'.
    *) Dropped useless directory.
    *) Added new directory for function development of melang.
