@@ -1,0 +1,13 @@
+
+/*
+ * Copyright (C) Niklaus F.Schen.
+ */
+#ifndef __MLN_LANG_MATRIX_H
+#define __MLN_LANG_MATRIX_H
+
+#include "mln_lang.h"
+
+extern int mln_lang_matrix(mln_lang_ctx_t *ctx);
+
+#endif
+
