@@ -1,3 +1,6 @@
+Changes with melon 1.6.8                                          22 May 2017
+    *) Added script functions about matrix.
+
 Changes with melon 1.6.7                                          20 May 2017
     *) Fixed some bugs of JSON.
     *) Added script functions about JSON.
